--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
-  </body>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion with its mouth open">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion with its mouth open" title="Lion" />
+    </body>
 </html>
